--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -21,8 +21,8 @@ cursor_blink_interval   0.0
 tab_bar_style           separator
 tab_separator           "|"
 # === FONT ===
-font_size               16
-font_family             Unifont
+font_size               13
+font_family             Input
 # === CLIPBOARD ===
 detect_urls             yes
 copy_on_select          yes
@@ -39,25 +39,26 @@ inactive_tab_background #000000
 inactive_tab_foreground #555555
 selection_background    #FFFFFF
 selection_foreground    #000000
-#JELLYBEANS
-background #141414
-foreground #e8e8d6
-cursor none
-selection_background #464d91
-color0 #919191
-color8 #bdbdbd
-color1 #e17373
-color9 #ffa0a0
-color2 #94b978
-color10 #bddeab
-color3 #ffb97b
-color11 #ffdba0
-color4 #96bddb
-color12 #b1d7f6
-color5 #e1c0fa
-color13 #fbdaff
-color6 #00988e
-color14 #19b2a7
-color7 #dedede
-color15 #ffffff
-selection_foreground #111111
+
+##JELLYBEANS
+#background #141414
+#foreground #e8e8d6
+#cursor none
+#selection_background #464d91
+#color0 #919191
+#color8 #bdbdbd
+#color1 #e17373
+#color9 #ffa0a0
+#color2 #94b978
+#color10 #bddeab
+#color3 #ffb97b
+#color11 #ffdba0
+#color4 #96bddb
+#color12 #b1d7f6
+#color5 #e1c0fa
+#color13 #fbdaff
+#color6 #00988e
+#color14 #19b2a7
+#color7 #dedede
+#color15 #ffffff
+#selection_foreground #111111
