--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -5,8 +5,8 @@ hide_window_decorations yes
 enable_audio_bell       no
 window_padding_width    0
 remember_window_size    no
-initial_window_width    108c
-initial_window_height   36c
+initial_window_width    80c
+initial_window_height   24c
 enabled_layouts fat:bias=70;full_size=1;mirrored=false
 map ctrl+shift+enter    new_window_with_cwd
 scrollback_lines        900
@@ -21,7 +21,7 @@ cursor_blink_interval   0.0
 tab_bar_style           separator
 tab_separator           "|"
 # === FONT ===
-font_size               13
+font_size               21
 font_family             Input
 # === CLIPBOARD ===
 detect_urls             yes
@@ -29,7 +29,7 @@ copy_on_select          yes
 strip_trailing_spaces   always
 # === COLORS ===
 #KARONDA
-cursor                  none
+cursor                  #fffeee
 active_border_color     #222222
 bell_border_color       #000010
 inactive_border_color   #222222
@@ -40,25 +40,43 @@ inactive_tab_foreground #555555
 selection_background    #FFFFFF
 selection_foreground    #000000
 
-##JELLYBEANS
-#background #141414
-#foreground #e8e8d6
-#cursor none
-#selection_background #464d91
-#color0 #919191
-#color8 #bdbdbd
-#color1 #e17373
-#color9 #ffa0a0
-#color2 #94b978
-#color10 #bddeab
-#color3 #ffb97b
-#color11 #ffdba0
-#color4 #96bddb
-#color12 #b1d7f6
-#color5 #e1c0fa
-#color13 #fbdaff
-#color6 #00988e
-#color14 #19b2a7
-#color7 #dedede
-#color15 #ffffff
-#selection_foreground #111111
+#GRUVBOX
+cursor                  #928374
+cursor_text_color       background
+url_color               #83a598
+visual_bell_color       #8ec07c
+bell_border_color       #8ec07c
+active_border_color     #d3869b
+inactive_border_color   #665c54
+background              #282828
+foreground              #fbf1c7
+selection_foreground    #928374
+selection_background    #ebdbb2
+active_tab_foreground   #fbf1c7
+active_tab_background   #665c54
+inactive_tab_foreground #a89984
+inactive_tab_background #3c3836
+# black
+color0                  #282828
+color8                  #7c6f64
+# red
+color1                  #cc241d
+color9                  #fb4934
+#: green
+color2                  #98971a
+color10                 #b8bb26
+# yellow
+color3                  #d79921
+color11                 #fabd2f
+# blue
+color4                  #458588
+color12                 #83a598
+# purple
+color5                  #b16286
+color13                 #d3869b
+# aqua
+color6                  #689d6a
+color14                 #8ec07c
+# white
+color7                  #a89984
+color15                 #fbf1c7
