--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -10,7 +10,7 @@ initial_window_height   24c
 enabled_layouts fat:bias=70;full_size=1;mirrored=false
 map ctrl+shift+enter    new_window_with_cwd
 scrollback_lines        900
-#mouse_hide_wait         0.01
+mouse_hide_wait         0.01
 #background_opacity      0.7
 # === EDITOR ===
 editor                  nvim
@@ -41,7 +41,8 @@ selection_background    #FFFFFF
 selection_foreground    #000000
 
 #GRUVBOX
-cursor                  #928374
+#cursor                  #928374
+cursor                  none
 cursor_text_color       background
 url_color               #83a598
 visual_bell_color       #8ec07c
