--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -42,7 +42,7 @@ selection_foreground    #000000
 
 #GRUVBOX
 #cursor                  #928374
-cursor                  none
+cursor                  #fbf1c7
 cursor_text_color       background
 url_color               #83a598
 visual_bell_color       #8ec07c
