--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -21,7 +21,7 @@ cursor_blink_interval   0.0
 tab_bar_style           separator
 tab_separator           "|"
 # === FONT ===
-font_size               25
+font_size               24
 font_family             Input
 # === CLIPBOARD ===
 detect_urls             yes
@@ -41,8 +41,8 @@ selection_background    #FFFFFF
 selection_foreground    #000000
 
 #GRUVBOX
-#cursor                  #928374
 cursor                  #fbf1c7
+cursor                  none
 cursor_text_color       background
 url_color               #83a598
 visual_bell_color       #8ec07c
@@ -63,7 +63,7 @@ color8                  #7c6f64
 # red
 color1                  #cc241d
 color9                  #fb4934
-#: green
+# green
 color2                  #98971a
 color10                 #b8bb26
 # yellow
