--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -5,8 +5,8 @@ hide_window_decorations yes
 enable_audio_bell       no
 window_padding_width    0
 remember_window_size    no
-initial_window_width    81c
-initial_window_height   23c
+initial_window_width    82c
+initial_window_height   24c
 enabled_layouts fat:bias=70;full_size=1;mirrored=false
 map ctrl+shift+enter    new_window_with_cwd
 scrollback_lines        900
@@ -21,25 +21,13 @@ cursor_blink_interval   0.0
 tab_bar_style           separator
 tab_separator           "|"
 # === FONT ===
-font_size               24
+font_size               27
 font_family             Input
 # === CLIPBOARD ===
 detect_urls             yes
 copy_on_select          yes
 strip_trailing_spaces   always
 # === COLORS ===
-#KARONDA
-cursor                  #fffeee
-active_border_color     #222222
-bell_border_color       #000010
-inactive_border_color   #222222
-active_tab_background   #000000
-active_tab_foreground   #FFFFFF
-inactive_tab_background #000000
-inactive_tab_foreground #555555
-selection_background    #FFFFFF
-selection_foreground    #000000
-
 #GRUVBOX
 cursor                  #fbf1c7
 cursor                  none
@@ -81,3 +69,36 @@ color14                 #8ec07c
 # white
 color7                  #a89984
 color15                 #fbf1c7
+#KARONDA
+cursor                  #fffeee
+active_border_color     #222222
+bell_border_color       #000010
+inactive_border_color   #222222
+active_tab_background   #000000
+active_tab_foreground   #FFFFFF
+inactive_tab_background #000000
+inactive_tab_foreground #555555
+selection_background    #FFFFFF
+selection_foreground    #000000
+#ONEDARK
+foreground #979eab
+background #2c2d30
+cursor #cccccc
+color0 #282c34
+color1 #e06c75
+color2 #98c379
+color3 #e5c07b
+color4 #61afef
+color5 #be5046
+color6 #56b6c2
+color7 #979eab
+color8 #393e48
+color9 #d19a66
+color10 #56b6c2
+color11 #e5c07b
+color12 #61afef
+color13 #be5046
+color14 #56b6c2
+color15 #abb2bf
+selection_foreground #282c34
+selection_background #979eab
