--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -5,8 +5,8 @@ hide_window_decorations yes
 enable_audio_bell       no
 window_padding_width    0
 remember_window_size    no
-initial_window_width    82c
-initial_window_height   24c
+initial_window_width    81c
+initial_window_height   27c
 enabled_layouts fat:bias=70;full_size=1;mirrored=false
 map ctrl+shift+enter    new_window_with_cwd
 scrollback_lines        900
@@ -14,31 +14,31 @@ mouse_hide_wait         0.01
 #background_opacity      0.7
 # === EDITOR ===
 editor                  nvim
-input_delay             1
+input_delay             9
 shell_integration       no-cursor
 cursor_blink_interval   0.0
 # === TABS ===
 tab_bar_style           separator
 tab_separator           "|"
 # === FONT ===
-font_size               27
+font_size               23
 font_family             Input
 # === CLIPBOARD ===
 detect_urls             yes
 copy_on_select          yes
 strip_trailing_spaces   always
-# === COLORS ===
-#KARONDA
-cursor                  #fffeee
-active_border_color     #222222
-bell_border_color       #000010
-inactive_border_color   #222222
-active_tab_background   #000000
-active_tab_foreground   #FFFFFF
-inactive_tab_background #000000
-inactive_tab_foreground #555555
-selection_background    #FFFFFF
-selection_foreground    #000000
+## === COLORS ===
+##KARONDA
+#cursor                  #fffeee
+#active_border_color     #222222
+#bell_border_color       #000010
+#inactive_border_color   #222222
+#active_tab_background   #000000
+#active_tab_foreground   #FFFFFF
+#inactive_tab_background #000000
+#inactive_tab_foreground #555555
+#selection_background    #FFFFFF
+#selection_foreground    #000000
 #GRUVBOX
 cursor                  #fbf1c7
 cursor                  none
@@ -80,3 +80,48 @@ color14                 #8ec07c
 # white
 color7                  #a89984
 color15                 #fbf1c7
+
+# DRACULA
+foreground            #f8f8f2
+background            #282a36
+selection_foreground  #ffffff
+selection_background  #44475a
+url_color #8be9fd
+# black
+color0  #21222c
+color8  #6272a4
+# red
+color1  #ff5555
+color9  #ff6e6e
+# green
+color2  #50fa7b
+color10 #69ff94
+# yellow
+color3  #f1fa8c
+color11 #ffffa5
+# blue
+color4  #bd93f9
+color12 #d6acff
+# magenta
+color5  #ff79c6
+color13 #ff92df
+# cyan
+color6  #8be9fd
+color14 #a4ffff
+# white
+color7  #f8f8f2
+color15 #ffffff
+# Cursor colors
+cursor            #f8f8f2
+cursor_text_color background
+# Tab bar colors
+active_tab_foreground   #282a36
+active_tab_background   #f8f8f2
+inactive_tab_foreground #282a36
+inactive_tab_background #6272a4
+# Marks
+mark1_foreground #282a36
+mark1_background #ff5555
+# Splits/Windows
+active_border_color #f8f8f2
+inactive_border_color #6272a4
