--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,18 +1,18 @@
-set -g status off # or on
-set -g prefix ` # backtick as new prefix
-set -sg escape-time 0 # quicker responses
-set -g base-index 1 # Numbering of windows
-setw -g pane-base-index 1 # Numbering of Panes
-set -g mouse on # allow mouse control
-set -g history-limit 10000
+set     -g     status              on # or on
+set     -g     prefix              ` # backtick as new prefix
+set     -sg    escape-time         0 # quicker responses
+set     -g     base-index          1 # Numbering of windows
+setw    -g     pane-base-index     1 # Numbering of Panes
+set     -g     mouse               on # allow mouse control
+set     -g     history-limit       10000
 # Options
 set-option -g status-position "top"
-set-option default-terminal "tmux-256color"
+set-option default-terminal "screen-256color"
 set-option -g status-style bg="default"
 # Custom colors
 set -g status-right "#[fg=white]%A, %d %b %Y %I:%M %p"
-set -g pane-border-style fg="black"                     # border colours
-set -g pane-active-border-style "bg=default fg=black"
+set -g pane-border-style "bg=black fg=white"                     # border colours
+set -g pane-active-border-style "bg=black fg=white"
 bind r source-file ~/.config/tmux/tmux.conf \; display "Reloaded!" # Reload tmux using `R
 unbind C-b # "release" Ctrl-B for other uses
 bind-key ` send-prefix # allow backtick to be used for other things
