--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -5,7 +5,7 @@ hide_window_decorations yes
 enable_audio_bell       no
 window_padding_width    0
 remember_window_size    no
-initial_window_width    81c
+initial_window_width    54c
 initial_window_height   27c
 enabled_layouts fat:bias=70;full_size=1;mirrored=false
 map ctrl+shift+enter    new_window_with_cwd
@@ -21,8 +21,9 @@ cursor_blink_interval   0.0
 tab_bar_style           separator
 tab_separator           "|"
 # === FONT ===
-font_size               23
-font_family             Input
+font_size               19
+font_family             JetBrains Mono NL
+font_family             Source Code Pro Medium
 # === CLIPBOARD ===
 detect_urls             yes
 copy_on_select          yes
@@ -39,6 +40,7 @@ strip_trailing_spaces   always
 #inactive_tab_foreground #555555
 #selection_background    #FFFFFF
 #selection_foreground    #000000
+
 #GRUVBOX
 cursor                  #fbf1c7
 cursor                  none
@@ -81,48 +83,48 @@ color14                 #8ec07c
 color7                  #a89984
 color15                 #fbf1c7
 
-# DRACULA
-foreground            #f8f8f2
-background            #282a36
-selection_foreground  #ffffff
-selection_background  #44475a
-url_color #8be9fd
-# black
-color0  #21222c
-color8  #6272a4
-# red
-color1  #ff5555
-color9  #ff6e6e
-# green
-color2  #50fa7b
-color10 #69ff94
-# yellow
-color3  #f1fa8c
-color11 #ffffa5
-# blue
-color4  #bd93f9
-color12 #d6acff
-# magenta
-color5  #ff79c6
-color13 #ff92df
-# cyan
-color6  #8be9fd
-color14 #a4ffff
-# white
-color7  #f8f8f2
-color15 #ffffff
-# Cursor colors
-cursor            #f8f8f2
-cursor_text_color background
-# Tab bar colors
-active_tab_foreground   #282a36
-active_tab_background   #f8f8f2
-inactive_tab_foreground #282a36
-inactive_tab_background #6272a4
-# Marks
-mark1_foreground #282a36
-mark1_background #ff5555
-# Splits/Windows
-active_border_color #f8f8f2
-inactive_border_color #6272a4
-
+## DRACULA
+#foreground            #f8f8f2
+#background            #282a36
+#selection_foreground  #ffffff
+#selection_background  #44475a
+#url_color #8be9fd
+## black
+#color0  #21222c
+#color8  #6272a4
+## red
+#color1  #ff5555
+#color9  #ff6e6e
+## green
+#color2  #50fa7b
+#color10 #69ff94
+## yellow
+#color3  #f1fa8c
+#color11 #ffffa5
+## blue
+#color4  #bd93f9
+#color12 #d6acff
+## magenta
+#color5  #ff79c6
+#color13 #ff92df
+## cyan
+#color6  #8be9fd
+#color14 #a4ffff
+## white
+#color7  #f8f8f2
+#color15 #ffffff
+## Cursor colors
+##cursor            #f8f8f2
+#cursor            none
+#cursor_text_color background
+## Tab bar colors
+#active_tab_foreground   #282a36
+#active_tab_background   #f8f8f2
+#inactive_tab_foreground #282a36
+#inactive_tab_background #6272a4
+## Marks
+#mark1_foreground #282a36
+#mark1_background #ff5555
+## Splits/Windows
+#active_border_color #f8f8f2
+#inactive_border_color #6272a4
