--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -10,7 +10,7 @@ initial_window_height   36c
 enabled_layouts fat:bias=70;full_size=1;mirrored=false
 map ctrl+shift+enter    new_window_with_cwd
 scrollback_lines        900
-mouse_hide_wait         0.01
+#mouse_hide_wait         0.01
 #background_opacity      0.7
 # === EDITOR ===
 editor                  nvim
@@ -21,66 +21,67 @@ cursor_blink_interval   0.0
 tab_bar_style           separator
 tab_separator           "|"
 # === FONT ===
-font_size               19
+font_size               18
 font_family             JetBrains Mono NL
 # === CLIPBOARD ===
 detect_urls             yes
 copy_on_select          yes
 strip_trailing_spaces   always
 ## === COLORS ===
-##KARONDA
-#cursor                  #fffeee
-#active_border_color     #222222
-#bell_border_color       #000010
-#inactive_border_color   #222222
-#active_tab_background   #000000
-#active_tab_foreground   #FFFFFF
-#inactive_tab_background #000000
-#inactive_tab_foreground #555555
-#selection_background    #FFFFFF
-#selection_foreground    #000000
 
-#GRUVBOX
-cursor                  #fbf1c7
-cursor                  none
-cursor_text_color       background
-url_color               #83a598
-visual_bell_color       #8ec07c
-bell_border_color       #8ec07c
-active_border_color     #d3869b
-inactive_border_color   #665c54
-background              #282828
-foreground              #fbf1c7
-selection_foreground    #928374
-selection_background    #ebdbb2
-active_tab_foreground   #fbf1c7
-active_tab_background   #665c54
-inactive_tab_foreground #a89984
-inactive_tab_background #3c3836
-# black
-color0                  #282828
-color8                  #7c6f64
-# red
-color1                  #cc241d
-color9                  #fb4934
-# green
-color2                  #98971a
-color10                 #b8bb26
-# yellow
-color3                  #d79921
-color11                 #fabd2f
-# blue
-color4                  #458588
-color12                 #83a598
-# purple
-color5                  #b16286
-color13                 #d3869b
-# aqua
-color6                  #689d6a
-color14                 #8ec07c
-# white
-color7                  #a89984
-color15                 #fbf1c7
+#KARONDA
+cursor                  #fffeee
+active_border_color     #222222
+bell_border_color       #000010
+inactive_border_color   #222222
+active_tab_background   #000000
+active_tab_foreground   #FFFFFF
+inactive_tab_background #000000
+inactive_tab_foreground #555555
+selection_background    #FFFFFF
+selection_foreground    #000000
+
+##GRUVBOX
+#cursor                  #fbf1c7
+#cursor                  none
+#cursor_text_color       background
+#url_color               #83a598
+#visual_bell_color       #8ec07c
+#bell_border_color       #8ec07c
+#active_border_color     #d3869b
+#inactive_border_color   #665c54
+#background              #282828
+#foreground              #fbf1c7
+#selection_foreground    #928374
+#selection_background    #ebdbb2
+#active_tab_foreground   #fbf1c7
+#active_tab_background   #665c54
+#inactive_tab_foreground #a89984
+#inactive_tab_background #3c3836
+## black
+#color0                  #282828
+#color8                  #7c6f64
+## red
+#color1                  #cc241d
+#color9                  #fb4934
+## green
+#color2                  #98971a
+#color10                 #b8bb26
+## yellow
+#color3                  #d79921
+#color11                 #fabd2f
+## blue
+#color4                  #458588
+#color12                 #83a598
+## purple
+#color5                  #b16286
+#color13                 #d3869b
+## aqua
+#color6                  #689d6a
+#color14                 #8ec07c
+## white
+#color7                  #a89984
+#color15                 #fbf1c7
 
 # DRACULA
 foreground            #f8f8f2
