--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -5,8 +5,8 @@ hide_window_decorations yes
 enable_audio_bell       no
 window_padding_width    0
 remember_window_size    no
-initial_window_width    90c
-initial_window_height   36c
+initial_window_width    72c
+initial_window_height   27c
 enabled_layouts fat:bias=70;full_size=1;mirrored=false
 map ctrl+shift+enter    new_window_with_cwd
 scrollback_lines        900
@@ -22,7 +22,7 @@ tab_bar_style           separator
 tab_separator           "|"
 # === FONT ===
 font_size               18
-font_family             JetBrains Mono NL
+font_family             Input
 # === CLIPBOARD ===
 detect_urls             yes
 copy_on_select          yes
@@ -114,8 +114,8 @@ color14 #a4ffff
 color7  #f8f8f2
 color15 #ffffff
 # Cursor colors
-#cursor            #f8f8f2
-cursor            none
+cursor            #f8f8f2
+#cursor            none
 cursor_text_color background
 # Tab bar colors
 active_tab_foreground   #282a36
@@ -128,3 +128,33 @@ mark1_background #ff5555
 # Splits/Windows
 active_border_color #f8f8f2
 inactive_border_color #6272a4
+
+## MELANGE
+#background #F4F0ED
+#foreground #6B5C4D
+##cursor     #6B5C4D
+#cursor     none
+#url_color  #485F84
+#selection_background    #DED2C8
+#selection_foreground    #6B5C4D
+#tab_bar_background      #E9E1DB
+#active_tab_background   #E9E1DB
+#active_tab_foreground   #C29830
+#inactive_tab_background #E9E1DB
+#inactive_tab_foreground #867462
+#color0  #E9E1DB
+#color1  #D7898C
+#color2  #83B887
+#color3  #C29830
+#color4  #485F84
+#color5  #BE79BB
+#color6  #729893
+#color7  #A38D78
+#color8  #DED2C8
+#color9  #C65333
+#color10 #659E69
+#color11 #C29830
+#color12 #485F84
+#color13 #854882
+#color14 #436460
+#color15 #867462
