--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -21,8 +21,8 @@ cursor_blink_interval   0.0
 tab_bar_style           separator
 tab_separator           "|"
 # === FONT ===
-font_size               18
-font_family             Input
+font_size               23
+font_family             JetBrains Mono
 # === CLIPBOARD ===
 detect_urls             yes
 copy_on_select          yes
@@ -158,3 +158,31 @@ inactive_border_color #6272a4
 #color13 #854882
 #color14 #436460
 #color15 #867462
+
+background #2A2520
+foreground #ECE1D7
+cursor     #ECE1D7
+url_color  #9AACCE
+selection_background    #4D453E
+selection_foreground    #ECE1D7
+tab_bar_background      #352F2A
+active_tab_background   #352F2A
+active_tab_foreground   #EBC06D
+inactive_tab_background #352F2A
+inactive_tab_foreground #C1A78E
+color0  #352F2A
+color1  #B65C60
+color2  #78997A
+color3  #EBC06D
+color4  #9AACCE
+color5  #B380B0
+color6  #86A3A3
+color7  #A38D78
+color8  #4D453E
+color9  #F17C64
+color10 #99D59D
+color11 #EBC06D
+color12 #9AACCE
+color13 #CE9BCB
+color14 #88B3B2
+color15 #C1A78E
