--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -4,10 +4,10 @@ hide_window_decorations yes
 # === WINDOW ===
 enable_audio_bell       no
 window_padding_width    0
-remember_window_size    no
+remember_window_size    yes
 initial_window_width    72c
-initial_window_height   27c
-enabled_layouts fat:bias=70;full_size=1;mirrored=false
+initial_window_height   23c
+enabled_layouts fat:bias=50;full_size=1;mirrored=false
 map ctrl+shift+enter    new_window_with_cwd
 scrollback_lines        900
 #mouse_hide_wait         0.01
@@ -15,14 +15,14 @@ scrollback_lines        900
 # === EDITOR ===
 editor                  nvim
 input_delay             9
-shell_integration       no-cursor
+#shell_integration       no-cursor
 cursor_blink_interval   0.0
 # === TABS ===
 tab_bar_style           separator
 tab_separator           "|"
 # === FONT ===
-font_size               23
-font_family             JetBrains Mono
+font_size               31
+font_family             JetBrains Mono NL
 # === CLIPBOARD ===
 detect_urls             yes
 copy_on_select          yes
@@ -41,47 +41,47 @@ inactive_tab_foreground #555555
 selection_background    #FFFFFF
 selection_foreground    #000000
 
-##GRUVBOX
-#cursor                  #fbf1c7
-#cursor                  none
-#cursor_text_color       background
-#url_color               #83a598
-#visual_bell_color       #8ec07c
-#bell_border_color       #8ec07c
-#active_border_color     #d3869b
-#inactive_border_color   #665c54
-#background              #282828
-#foreground              #fbf1c7
-#selection_foreground    #928374
-#selection_background    #ebdbb2
-#active_tab_foreground   #fbf1c7
-#active_tab_background   #665c54
-#inactive_tab_foreground #a89984
-#inactive_tab_background #3c3836
-## black
-#color0                  #282828
-#color8                  #7c6f64
-## red
-#color1                  #cc241d
-#color9                  #fb4934
-## green
-#color2                  #98971a
-#color10                 #b8bb26
-## yellow
-#color3                  #d79921
-#color11                 #fabd2f
-## blue
-#color4                  #458588
-#color12                 #83a598
-## purple
-#color5                  #b16286
-#color13                 #d3869b
-## aqua
-#color6                  #689d6a
-#color14                 #8ec07c
-## white
-#color7                  #a89984
-#color15                 #fbf1c7
+#GRUVBOX
+cursor                  #fbf1c7
+cursor                  none
+cursor_text_color       background
+url_color               #83a598
+visual_bell_color       #8ec07c
+bell_border_color       #8ec07c
+active_border_color     #d3869b
+inactive_border_color   #665c54
+background              #282828
+foreground              #fbf1c7
+selection_foreground    #928374
+selection_background    #ebdbb2
+active_tab_foreground   #fbf1c7
+active_tab_background   #665c54
+inactive_tab_foreground #a89984
+inactive_tab_background #3c3836
+# black
+color0                  #282828
+color8                  #7c6f64
+# red
+color1                  #cc241d
+color9                  #fb4934
+# green
+color2                  #98971a
+color10                 #b8bb26
+# yellow
+color3                  #d79921
+color11                 #fabd2f
+# blue
+color4                  #458588
+color12                 #83a598
+# purple
+color5                  #b16286
+color13                 #d3869b
+# aqua
+color6                  #689d6a
+color14                 #8ec07c
+# white
+color7                  #a89984
+color15                 #fbf1c7
 
 # DRACULA
 foreground            #f8f8f2
@@ -129,60 +129,86 @@ mark1_background #ff5555
 active_border_color #f8f8f2
 inactive_border_color #6272a4
 
-## MELANGE
-#background #F4F0ED
-#foreground #6B5C4D
-##cursor     #6B5C4D
-#cursor     none
-#url_color  #485F84
-#selection_background    #DED2C8
-#selection_foreground    #6B5C4D
-#tab_bar_background      #E9E1DB
-#active_tab_background   #E9E1DB
-#active_tab_foreground   #C29830
-#inactive_tab_background #E9E1DB
-#inactive_tab_foreground #867462
-#color0  #E9E1DB
-#color1  #D7898C
-#color2  #83B887
-#color3  #C29830
-#color4  #485F84
-#color5  #BE79BB
-#color6  #729893
-#color7  #A38D78
-#color8  #DED2C8
-#color9  #C65333
-#color10 #659E69
-#color11 #C29830
-#color12 #485F84
-#color13 #854882
-#color14 #436460
-#color15 #867462
-
-background #2A2520
-foreground #ECE1D7
-cursor     #ECE1D7
-url_color  #9AACCE
-selection_background    #4D453E
-selection_foreground    #ECE1D7
-tab_bar_background      #352F2A
-active_tab_background   #352F2A
-active_tab_foreground   #EBC06D
-inactive_tab_background #352F2A
-inactive_tab_foreground #C1A78E
-color0  #352F2A
-color1  #B65C60
-color2  #78997A
-color3  #EBC06D
-color4  #9AACCE
-color5  #B380B0
-color6  #86A3A3
+# MELANGE
+background #F4F0ED
+foreground #6B5C4D
+#cursor     #6B5C4D
+cursor     none
+url_color  #485F84
+selection_background    #DED2C8
+selection_foreground    #6B5C4D
+tab_bar_background      #E9E1DB
+active_tab_background   #E9E1DB
+active_tab_foreground   #C29830
+inactive_tab_background #E9E1DB
+inactive_tab_foreground #867462
+color0  #E9E1DB
+color1  #D7898C
+color2  #83B887
+color3  #C29830
+color4  #485F84
+color5  #BE79BB
+color6  #729893
 color7  #A38D78
-color8  #4D453E
-color9  #F17C64
-color10 #99D59D
-color11 #EBC06D
-color12 #9AACCE
-color13 #CE9BCB
-color14 #88B3B2
-color15 #C1A78E
+color8  #DED2C8
+color9  #C65333
+color10 #659E69
+color11 #C29830
+color12 #485F84
+color13 #854882
+color14 #436460
+color15 #867462
+
+# MELANGE LIGHT
+background #F4F0ED
+foreground #6B5C4D
+cursor     #6B5C4D
+cursor     none
+url_color  #485F84
+selection_background    #DED2C8
+selection_foreground    #6B5C4D
+tab_bar_background      #E9E1DB
+active_tab_background   #E9E1DB
+active_tab_foreground   #C29830
+inactive_tab_background #E9E1DB
+inactive_tab_foreground #867462
+color0  #E9E1DB
+color1  #D7898C
+color2  #83B887
+color3  #C29830
+color4  #485F84
+color5  #BE79BB
+color6  #729893
+color7  #A38D78
+color8  #DED2C8
+color9  #C65333
+color10 #659E69
+color11 #C29830
+color12 #485F84
+color13 #854882
+color14 #436460
+color15 #867462
+
+# MONOKAI
+background #272822
+foreground #fdfff1
+cursor #fdfff1
+cursor_text_color #000000
+selection_foreground #3b3c35
+selection_background #fdfff1
+color0 #3b3c35
+color8 #6e7066
+color1 #f82570
+color9 #f82570
+color2 #a6e12d
+color10 #a6e12d
+color3 #e4db73
+color11 #e4db73
+color4 #fc961f
+color12 #fc961f
+color5 #ae81ff
+color13 #ae81ff
+color6 #66d9ee
+color14 #66d9ee
+color7 #fdfff1
+color15 #fdfff1
