--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -5,9 +5,9 @@ set     -g     base-index          1 # Numbering of windows
 setw    -g     pane-base-index     1 # Numbering of Panes
 set     -g     mouse               on # allow mouse control
 set     -g     history-limit       10000
+set     -g     default-terminal    "xterm-256color"
 # Options
 set-option -g status-position "top"
-set-option default-terminal "screen-256color"
 set-option -g status-style bg="default"
 # Custom colors
 set -g status-right "#[fg=white]%A, %d %b %Y %I:%M %p"
