--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -15,7 +15,7 @@ scrollback_lines        900
 # === EDITOR ===
 editor                  nvim
 input_delay             9
-#shell_integration       no-cursor
+shell_integration       no-cursor
 cursor_blink_interval   0.0
 # === TABS ===
 tab_bar_style           separator
