--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -4,9 +4,9 @@ hide_window_decorations yes
 # === WINDOW ===
 enable_audio_bell       no
 window_padding_width    0
-remember_window_size    yes
-initial_window_width    72c
-initial_window_height   23c
+remember_window_size    no
+initial_window_width    75c
+initial_window_height   22c
 enabled_layouts fat:bias=50;full_size=1;mirrored=false
 map ctrl+shift+enter    new_window_with_cwd
 scrollback_lines        900
@@ -21,8 +21,8 @@ cursor_blink_interval   0.0
 tab_bar_style           separator
 tab_separator           "|"
 # === FONT ===
-font_size               31
-font_family             JetBrains Mono NL
+font_size               27
+font_family             Consolas
 # === CLIPBOARD ===
 detect_urls             yes
 copy_on_select          yes
@@ -212,3 +212,15 @@ color6 #66d9ee
 color14 #66d9ee
 color7 #fdfff1
 color15 #fdfff1
+
+#MONOTONE
+cursor none
+background #ffffff
+foreground #000000
+selection_background    #DED2C8
+selection_foreground    #6B5C4D
+tab_bar_background      #FFFFFF
+active_tab_background   #000000
+active_tab_foreground   #FFFFFF
+inactive_tab_background #FFFFFF
+inactive_tab_foreground #000000
