--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -15,14 +15,14 @@ scrollback_lines        900
 # === EDITOR ===
 editor                  nvim
 input_delay             9
-shell_integration       no-cursor
+#shell_integration       no-cursor
 cursor_blink_interval   0.0
 # === TABS ===
 tab_bar_style           separator
 tab_separator           "|"
 # === FONT ===
 font_size               27
-font_family             Consolas
+font_family             DejaVu Sans Mono
 # === CLIPBOARD ===
 detect_urls             yes
 copy_on_select          yes
@@ -215,8 +215,8 @@ color15 #fdfff1
 
 #MONOTONE
 cursor none
-background #ffffff
-foreground #000000
+background #000000
+foreground #FFFFFF
 selection_background    #DED2C8
 selection_foreground    #6B5C4D
 tab_bar_background      #FFFFFF
