--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -8,14 +8,14 @@ remember_window_size    no
 initial_window_width    75c
 initial_window_height   22c
 enabled_layouts fat:bias=50;full_size=1;mirrored=false
-map ctrl+shift+enter    new_window_with_cwd
+map   ctrl+shift+enter  new_window_with_cwd
 scrollback_lines        900
-#mouse_hide_wait         0.01
+mouse_hide_wait         0.01
 #background_opacity      0.7
 # === EDITOR ===
 editor                  nvim
 input_delay             9
-#shell_integration       no-cursor
+shell_integration       no-cursor
 cursor_blink_interval   0.0
 # === TABS ===
 tab_bar_style           separator
@@ -214,9 +214,9 @@ color7 #fdfff1
 color15 #fdfff1
 
 #MONOTONE
-cursor none
-background #000000
-foreground #FFFFFF
+cursor                  none
+background              #FFFFFF
+foreground              #000000
 selection_background    #DED2C8
 selection_foreground    #6B5C4D
 tab_bar_background      #FFFFFF
